src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/CD4AC3011.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram CD4AC3011 {

	class A;
	class B;
	
	association assoc1 A -> B;
	association A <- B;
	association A <-> B;
	association A -- B;
}